--- a/LemonTriTest/package.json
+++ b/LemonTriTest/package.json
@@ -10,30 +10,82 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.0",
-    "@angular/common": "~12.0.0",
-    "@angular/compiler": "~12.0.0",
-    "@angular/core": "~12.0.0",
-    "@angular/forms": "~12.0.0",
-    "@angular/platform-browser": "~12.0.0",
-    "@angular/platform-browser-dynamic": "~12.0.0",
-    "@angular/router": "~12.0.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.1.0",
+    "@angular/animations": "^14.2.12",
+    "@angular/common": "^14.2.12",
+    "@angular/compiler": "^14.2.12",
+    "@angular/core": "^14.2.12",
+    "@angular/forms": "^14.2.12",
+    "@angular/localize": "^14.2.12",
+    "@angular/platform-browser": "^14.2.12",
+    "@angular/platform-browser-dynamic": "^14.2.12",
+    "@angular/router": "^14.2.12",
+    "@fortawesome/angular-fontawesome": "^0.11.1",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^13.1.1",
+    "@ng-idle/core": "^11.0.2",
+    "@ng-idle/keepalive": "^11.0.2",
+    "@ng-select/ng-select": "^9.1.0",
+    "@ngrx/effects": "^14.3.2",
+    "@ngrx/store": "^14.3.2",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
+    "@popperjs/core": "^2.11.6",
+    "angular-archwizard": "^7.0.0",
+    "boosted": "^5.2.2",
+    "bootstrap": "^5.2.2",
+    "crypto-js": "^4.1.1",
+    "ngx-cacheable": "^1.4.3",
+    "ngx-ellipsis": "^3.1.5",
+    "ngx-perfect-scrollbar": "^10.1.1",
+    "popper.js": "^1.16.1",
+    "rxjs": "^7.6.0",
+    "rxjs-compat": "^6.6.7",
+    "shelljs": "^0.8.5",
+    "swiper": "^8.4.5",
+    "tablesorter": "^2.31.3",
+    "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.0",
-    "@angular/cli": "~12.0.0",
-    "@angular/compiler-cli": "~12.0.0",
+    "@angular-devkit/build-angular": "^14.2.10",
+    "@angular-eslint/builder": "14.4.0",
+    "@angular-eslint/eslint-plugin": "^14.4.0",
+    "@angular-eslint/eslint-plugin-template": "^14.4.0",
+    "@angular-eslint/schematics": "14.4.0",
+    "@angular-eslint/template-parser": "^14.4.0",
+    "@angular/cli": "^14.2.10",
+    "@angular/compiler-cli": "^14.2.12",
+    "@angular/language-service": "^14.2.12",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@ngrx/schematics": "^14.3.2",
+    "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~3.7.0",
-    "karma": "~6.3.0",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^12.20.39",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.8.1",
+    "@typescript-eslint/parser": "^5.36.2",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.23.0",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-jsdoc": "^37.4.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-unicorn": "^39.0.0",
+    "husky": "^8.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "typescript": "~4.2.3"
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-junit-reporter": "^2.0.1",
+    "karma-parallel": "^0.3.1",
+    "protractor": "~7.0.0",
+    "ts-node": "~7.0.0",
+    "typescript": "~4.6.4",
+    "webpack-bundle-analyzer": "^3.9.0",
+    "yargs": "^17.6.2"
   }
 }
